Fix the PLCP lookup code in iwn(4) to base the 11n decision on whether the rate is 11n, rather than whether the channel is 11n.

This correctly allows the PLCP lookup code to return the legacy rates
even on an 11n channel.

PR:		kern/183430